Add event listener to player info form

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 <body>
     <main>
-        <div class="players">
-            <div class="player1">Player 1</div>
-            <div class="player2">Player 2</div>
-        </div>
+        <div class="info">
+            <form id="player-info">
+                <input type="text" name="player1" placeholder="Enter name">
+                <label for="player1">Player 1</label>
+                <input type="text" name="player2" placeholder="Enter name">
+                <label for="player1">Player 2</label>
+                <button type="submit">Play!</button>
+            </form>
         <div class="gameboard">
             <div class="tile" id="tile0" value="0"></div>
             <div class="tile" id="tile1" value="1"></div>
