Finish game and reset

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <main>
         <div class="info">
             <form id="player-info">
-                <input type="text" name="player1" placeholder="Enter name">
+                <input type="text" name="player1" placeholder="Enter name" autocomplete="off">
                 <label for="player1">Player 1</label>
-                <input type="text" name="player2" placeholder="Enter name">
+                <input type="text" name="player2" placeholder="Enter name" autocomplete="off">
                 <label for="player1">Player 2</label>
                 <button type="submit">Play!</button>
             </form>
+        </div>
         <div class="gameboard">
             <div class="tile" id="tile0" value="0"></div>
             <div class="tile" id="tile1" value="1"></div>
