--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <main>
         <div class="info">
             <form id="player-info">
-                <input type="text" name="player1" placeholder="Enter name" autocomplete="off">
-                <label for="player1">Player 1</label>
-                <input type="text" name="player2" placeholder="Enter name" autocomplete="off">
-                <label for="player1">Player 2</label>
+                <label for="player1Name">Player 1</label>
+                <input type="text" name="player1Name" placeholder="Enter name" autocomplete="off">
+                <label for="player2Name">Player 2</label>
+                <input type="text" name="player2Name" placeholder="Enter name" autocomplete="off">
                 <button type="submit">Play!</button>
             </form>
         </div>
